fixed login signup on small screens

--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -1,6 +1,6 @@
 html body {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
 }
 
 .container {
@@ -37,4 +37,22 @@ input {
 
 button {
   border-radius: 0.8em;
+}
+
+@media(max-width:47em) {
+  .login-container {
+    max-width: 80%;
+    font-size: 0.8em;
+  }
+
+  .input {
+    font-size: 0.7em;
+  }
+}
+
+@media(max-width:281px) {
+  .login-container {
+    max-width: 80%;
+    font-size: 0.7em;
+  }
 }
